Fixed overflow and mobile rendered

--- a/src/app-alr/board/board-list/board-list.component.scss
+++ b/src/app-alr/board/board-list/board-list.component.scss
@@ -1,6 +1,19 @@
+@import '../../../../node_modules/bootstrap/scss/bootstrap-grid';
 
 .board-list-wrapper {
-  padding: 5em;
+  @include media-breakpoint-up(xs) {
+    padding: 1em;
+  }
+  @include media-breakpoint-up(sm) {
+    padding: 3em;
+  }
+  @include media-breakpoint-up(md) {
+    padding: 4em;
+  }
+  @include media-breakpoint-up(lg) {
+    padding: 5em;
+  }
+
   min-height: calc(100% - 4em);
   height: 100vh;
 }
