--- a/src/app-alr/board/board/board.component.scss
+++ b/src/app-alr/board/board/board.component.scss
@@ -1,7 +1,6 @@
 .board-wrapper {
   height: 100vh;
-  width: 100%;
-  display: block;
+  overflow-x: auto;
   background-color: #0079BF;
 
   input[text], button {
@@ -53,9 +52,7 @@
   .board-columns-wrapper {
     height: 100%;
     min-width: 100%;
-    overflow: hidden;
     overflow-x: scroll;
-
   }
 }
 
